objects/OPP_SupportRequest__c.object
<CustomObject>
    <fields>
        <fullName>VIPStatus__c</fullName>
        <formula>IF(OR((TEXT(Opportunity__r.Account.Account_VIPFlag__c) = &quot;VIP1&quot;),
(TEXT(Opportunity__r.EndUserCustomer__r.Account_VIPFlag__c) = &quot;VIP1&quot;),
(TEXT(Opportunity__r.FinalCustSiteAcc__r.Account_VIPFlag__c) = &quot;VIP1&quot;)), &quot;1 - Gold&quot;, 

IF(OR((TEXT(Opportunity__r.Account.Account_VIPFlag__c) = &quot;VIP2&quot;),
(TEXT(Opportunity__r.EndUserCustomer__r.Account_VIPFlag__c) = &quot;VIP2&quot;),
(TEXT(Opportunity__r.FinalCustSiteAcc__r.Account_VIPFlag__c) = &quot;VIP2&quot;)), &quot;2 - Silver&quot;,

 
IF(OR((TEXT(Opportunity__r.Account.Account_VIPFlag__c) = &quot;VIP3&quot;),
(TEXT(Opportunity__r.EndUserCustomer__r.Account_VIPFlag__c) = &quot;VIP3&quot;),
(TEXT(Opportunity__r.FinalCustSiteAcc__r.Account_VIPFlag__c) = &quot;VIP3&quot;)),  &quot;3 - Bronze&quot;, 

IF(OR((TEXT(Opportunity__r.Account.Account_VIPFlag__c) = &quot;VIP4&quot;),
(TEXT(Opportunity__r.EndUserCustomer__r.Account_VIPFlag__c) = &quot;VIP4&quot;),
(TEXT(Opportunity__r.FinalCustSiteAcc__r.Account_VIPFlag__c) = &quot;VIP4&quot;)),  &quot;4 - OEM&quot;,&quot;5 - CTA&quot;))))</formula>
        <label>VIP Status Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueChainPlayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value Chain Player</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPP_ValueChainPlayers__c.OpportunityName__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_ValueChainPlayers__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WarningMessage__c</fullName>
        <formula>IF(  ISPICKVAL(SupportType__c,&quot;Transfer Opportunity Ownership&quot;) ,IMAGE(&quot;/resource/STR029_SupportRequestWarningMessage&quot;,&quot;Support Request&quot;, 35, 350),&quot; &quot;)</formula>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkloadDesignOfficeHours__c</fullName>
        <description>May 2011 Release</description>
        <label>Workload Design Office (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadExpertHours__c</fullName>
        <description>May 2011 Release</description>
        <label>Workload Expert (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadIGFCHours__c</fullName>
        <description>May 2011 Release</description>
        <label>Workload IGFC (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadLogisticsHours__c</fullName>
        <description>May 2011 Release</description>
        <label>Workload Logistics (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadProjectManagerHours__c</fullName>
        <description>May 2011 Release</description>
        <label>Workload Project Manager (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadPurchasingHours__c</fullName>
        <description>May 2011 Release</description>
        <label>Workload Purchasing (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadTechLeaderHours__c</fullName>
        <description>May 2011 Release</description>
        <label>Workload Tech Leader (Hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadType__c</fullName>
        <label>Workload Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Solution</fullName>
                </value>
                <value>
                    <fullName>Revised Solution</fullName>
                </value>
                <value>
                    <fullName>Technical Review</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Support Request</label>
    <listViews>
        <fullName>AC_E_House_Asia_Pacific_Open_SR_s</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>TECH_SubmittedDate__c</columns>
        <columns>ExpectedAnswerDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenterHLNK__c</field>
            <operation>contains</operation>
            <value>AC_E-House_Asia Pacific</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Submitted,Accepted - Scheduled,Accepted - In Progress,Accepted - On Hold</value>
        </filters>
        <label>AC_E-House_Asia Pacific - Open SR&apos;s</label>
        <language>en_US</language>
        <sharedTo>
            <group>PZ_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_E_House_Asia_Pacific_Open_SR_s1</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>TECH_SubmittedDate__c</columns>
        <columns>ExpectedAnswerDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenterHLNK__c</field>
            <operation>contains</operation>
            <value>AC_E-House_Asia Pacific</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Cancelled,Rejected,Refused,Closed</value>
        </filters>
        <label>AC_E-House_Asia Pacific - Closed SR&apos;s</label>
        <language>en_US</language>
        <sharedTo>
            <group>PZ_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_US_MVLV_Water_Wastewater1</fullName>
        <columns>NAME</columns>
        <columns>TECH_SubmittedDate__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Status__c</columns>
        <columns>OppLeader__c</columns>
        <columns>SolutionCenterHLNK__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>SellingCenter__c</columns>
        <columns>SupportUser1__c</columns>
        <columns>SellingCenterHLNK__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SupportEmail__c</field>
            <operation>equals</operation>
            <value>MVLV_WaterWastewater@schneider-electric.com</value>
        </filters>
        <filters>
            <field>ExpectedAnswerDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>AC-US-MVLV Water Wastewater</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_NAM_ITB_Consultation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANC_My_Support_Requests</fullName>
        <columns>ExpectedAnswerDate__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>AssignedToUser__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Mine</filterScope>
        <label>ANC My Support Requests All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ANC</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_My_New_Support_Requests</fullName>
        <columns>NAME</columns>
        <columns>SolutionCenterHLNK__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OppSEReference__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>ANC My New Support Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>ANC</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_IND</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>SupportUser1__c</columns>
        <columns>SupportUser2__c</columns>
        <filterScope>Everything</filterScope>
        <label>AU_IND</label>
        <language>en_US</language>
        <sharedTo>
            <group>AU_IND</group>
            <group>AU_IND_Managers</group>
            <group>AU_IND_PA</group>
            <group>AU_Industry_NSW_Sales</group>
            <group>AU_Industry_PreSales</group>
            <group>AU_Industry_QLD_Sales</group>
            <group>AU_Industry_SA_Sales</group>
            <group>AU_Industry_VIC_Sales</group>
            <group>AU_Industry_WA_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_IND_Aki_Service_Request_Open</fullName>
        <columns>NAME</columns>
        <columns>AssignedToUser__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Status__c</columns>
        <columns>TECH_SubmittedDate__c</columns>
        <columns>TECH_CompletedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>equals</operation>
            <value>SC_AU_IND_PreSales</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Submitted,Accepted - Scheduled,Accepted - In Progress,Accepted - On Hold</value>
        </filters>
        <filters>
            <field>AssignedToUser__c</field>
            <operation>equals</operation>
            <value>akinori takayanagi</value>
        </filters>
        <label>AU_IND_Aki Service Request Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>AU_IND</group>
            <group>AU_IND_Managers</group>
            <group>AU_IND_PA</group>
            <group>AU_Industry_NSW_Sales</group>
            <group>AU_Industry_PreSales</group>
            <group>AU_Industry_QLD_Sales</group>
            <group>AU_Industry_SA_Sales</group>
            <group>AU_Industry_VIC_Sales</group>
            <group>AU_Industry_WA_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Aki_Service_Request_View</fullName>
        <columns>NAME</columns>
        <columns>AssignedToUser__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Status__c</columns>
        <columns>TECH_SubmittedDate__c</columns>
        <columns>TECH_CompletedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>equals</operation>
            <value>SC_AU_IND_PreSales</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>aktakaya</value>
        </filters>
        <label>AU_IND_Aki Service Request View Complete</label>
        <language>en_US</language>
        <sharedTo>
            <role>AU_IND_SALES_2</role>
            <role>AU_IND_SALES_MMM</role>
            <role>AU_IND_SALES_NSW_2</role>
            <role>AU_IND_SALES_PA</role>
            <role>AU_IND_SALES_PS</role>
            <role>AU_IND_SALES_QLD_2</role>
            <role>AU_IND_SALES_SA_2</role>
            <role>AU_IND_SALES_TRANS</role>
            <role>AU_IND_SALES_VIC_2</role>
            <role>AU_IND_SALES_WA_2</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllSupportRequests</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenterHLNK__c</field>
            <operation>contains</operation>
            <value>QC-ENE-ADH Cayirova Turkey-NME&amp;EAP&amp;America DO NOT USE</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TECH_SubmittedDate__c</field>
            <operation>lessThan</operation>
            <value>11/1/2017 12:00 AM</value>
        </filters>
        <label>Support Requests QC-ENE-ADH Cayirova Tur</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_00_ALL_SR</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Comments__c</columns>
        <columns>SolutionCenter__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>OppAccount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>startsWith</operation>
            <value>BE_SC</value>
        </filters>
        <label>BE_00 ALL SR</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_01_All_SR_Status_None</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Comments__c</columns>
        <columns>SolutionCenter__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>OppAccount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>startsWith</operation>
            <value>BE_SC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>BE_00 SR Status None</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_02_All_SR_Status_Accepted</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Comments__c</columns>
        <columns>SolutionCenter__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>OppAccount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>startsWith</operation>
            <value>BE_SC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Accepted</value>
        </filters>
        <label>BE_02 SR Status Accepted</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_02_All_SR_Status_submitted</fullName>
        <booleanFilter>(1 AND 2) or (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Comments__c</columns>
        <columns>SolutionCenter__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>OppAccount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>startsWith</operation>
            <value>BE_SC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>contains</operation>
            <value>BELUX-ITD</value>
        </filters>
        <label>BE_03 SR Status submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_04_SR_Status_Completed_Closed</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Comments__c</columns>
        <columns>SolutionCenter__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>OppAccount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>startsWith</operation>
            <value>BE_SC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed,Closed</value>
        </filters>
        <label>BE_04 SR Status Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_All_Support_Requests</fullName>
        <booleanFilter>1 AND (2 or 3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>SupportRequestedBy__c</columns>
        <columns>Comments__c</columns>
        <columns>SolutionCenter__c</columns>
        <columns>AssignedToUser__c</columns>
        <columns>OppAccount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SolutionCenter__c</field>
            <operation>startsWith</operation>
            <value>BE_SC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Submitted,Accepted - Scheduled,Accepted - In Progress</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted - On Hold Back-Office,Accepted - On Hold Front-Office</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>BE_01 SR Status ALL OPEN</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Support Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <recordTypes>
        <fullName>SellingCenterAndTransferOpportunityReadOnly</fullName>
        <active>true</active>
        <description>Read only - Support Request for Generic Support, through Businesses &amp; Countries and for Transfer of Opportunity Ownership.</description>
        <label>Selling Center And Transfer Opportunity Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SellingSupportRequestCrossBorderandCrossBusiness</fullName>
        <active>true</active>
        <description>Support Request for Generic Support, through Businesses and Countries.</description>
        <label>Selling Support Request – Cross Border and Cross Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>SolutionCenterReadOnly</fullName>
        <active>true</active>
        <description>Read only - Support Request for Technical or Bid Expertise.</description>
        <label>Solution Center Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SolutionsandQuotationsSupportRequests</fullName>
        <active>true</active>
        <description>Support Request for Technical or Bid Expertise.</description>
        <label>Solutions and Quotations Support Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>TransferOpportunityOwnership</fullName>
        <active>true</active>
        <description>Support Request for Transfer of Opportunity Ownership.</description>
        <label>Transfer Opportunity Ownership</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SRQ_VR01_OnSolnCenterChange</fullName>
        <active>true</active>
        <description>September Release - Validation Rule to prevent user from changing the solution center</description>
        <errorConditionFormula>(AND ($User.BypassVR__c = False,OR( ISPICKVAL(Status__c, &quot;Accepted - Scheduled&quot;),ISPICKVAL(Status__c, &quot;Accepted - In Progress&quot;),ISPICKVAL(Status__c, &quot;Accepted - On Hold&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Back-Office&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Front-Office&quot;)) ,ISCHANGED(SolutionCenter__c)))</errorConditionFormula>
        <errorDisplayField>SolutionCenter__c</errorDisplayField>
        <errorMessage>You cannot modify the Solution Center of this Support Request because its status is too advanced.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SRQ_VR02_OnSlngCenterChange</fullName>
        <active>true</active>
        <description>September Release - Validation Rule to prevent user from changing the selling center.</description>
        <errorConditionFormula>(AND ($User.BypassVR__c = False,OR( ISPICKVAL(Status__c, &quot;Accepted - Scheduled&quot;),ISPICKVAL(Status__c, &quot;Accepted - In Progress&quot;),ISPICKVAL(Status__c, &quot;Accepted - On Hold&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Back-Office&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Front-Office&quot;)) ,ISCHANGED( SellingCenter__c )))</errorConditionFormula>
        <errorDisplayField>SellingCenter__c</errorDisplayField>
        <errorMessage>You cannot modify the Selling Center of this Support Request because its status is too advanced.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SRQ_VR03_ExpectedCompletedDateMandatory</fullName>
        <active>true</active>
        <description>SEPTEMBER RELEASE - Expected Completed Date is Mandatory for Support request if status is ʺAccepted - Scheduledʺ or ʺAccepted - In Progressʺ or ʺAccepted - On Hold Back-Officeʺ or ʺAccepted - On Hold Front-Officeʺ or ʺCompletedʺ.</description>
        <errorConditionFormula>AND (NOT($User.BypassVR__c),OR( ISPICKVAL(Status__c, &quot;Accepted - Scheduled&quot;), ISPICKVAL(Status__c, &quot;Accepted - In Progress&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Back-Office&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Front-Office&quot;), ISPICKVAL(Status__c, &quot;Completed&quot;)) , ISBLANK(ExpectedAnswerDate__c) )</errorConditionFormula>
        <errorDisplayField>ExpectedAnswerDate__c</errorDisplayField>
        <errorMessage>Expected Completed Date is mandatory if Support Request Status is Accepted - Scheduled or Accepted - In Progress or Accepted - On Hold or Accepted - On Hold Back Office or Accepted - On Hold Front Office or Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SRQ_VR04_AssignedToUserMandatory</fullName>
        <active>true</active>
        <description>SEPTEMBER RELEASE - Assigned To User is Mandatory for Support request if status is ʺAccepted - In Progressʺ or ʺAccepted - On Hold Back-Officeʺ or ʺAccepted - On Hold Front-Officeʺor ʺAccepted - On Hold ʺ or ʺCompletedʺ.</description>
        <errorConditionFormula>AND (NOT($User.BypassVR__c),OR( ISPICKVAL(Status__c, &quot;Accepted - In Progress&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Back-Office&quot;), ISPICKVAL(Status__c, &quot;Accepted - On Hold Front-Office&quot;), ISPICKVAL(Status__c, &quot;Completed&quot;)) , ISBLANK(AssignedToUser__c) )</errorConditionFormula>
        <errorDisplayField>AssignedToUser__c</errorDisplayField>
        <errorMessage>Assigned To User is mandatory if Support Request Status is Accepted - In Progress or Accepted - On Hold or Accepted - On Hold Back Office or Accepted - On Hold Front Office or Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SRQ_VR_OCT15SLS01_SupportReqDate</fullName>
        <active>true</active>
        <description>Throws a validation if the “Support Requested By” date is earlier than the “Created Date”</description>
        <errorConditionFormula>IF(IsNew(), SupportRequestedBy__c &lt; TODAY(), SupportRequestedBy__c &lt; DATEVALUE(CreatedDate)) &amp;&amp; NOT($User.BypassVR__c)</errorConditionFormula>
        <errorDisplayField>SupportRequestedBy__c</errorDisplayField>
        <errorMessage>Support Requested By date cannot be earlier than Created Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SRQ_VR_OCT15SLS02_ExpectedCompDate</fullName>
        <active>true</active>
        <description>Throws a validation record if the “Expected Completed Date” is earlier than the “Submitted Date”</description>
        <errorConditionFormula>(ExpectedAnswerDate__c &lt; DATEValue(TECH_SubmittedDate__c)) &amp;&amp;  NOT($User.BypassVR__c)</errorConditionFormula>
        <errorDisplayField>ExpectedAnswerDate__c</errorDisplayField>
        <errorMessage>Expected Completed Date cannot be earlier than Submitted Date</errorMessage>
    </validationRules>
</CustomObject>